--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,7 +3,7 @@ main .new-tweet {
   flex-direction: column;
   flex-grow: 1;
   display: none;
-  width: 90%;
+  width: 25em;
   border-radius: 10px;
   margin: 0em auto;
   background-color: #d3d3d3;
@@ -25,7 +25,7 @@ main .new-tweet {
   width: 100%;
   margin: auto;
   margin-top: 1em;
-  height: auto;
+  height: 5em;
   padding: .3em;
 }
 
